Remove margin padding to div. Add div holder class

--- a/css/ezss-basics.css
+++ b/css/ezss-basics.css
@@ -14,7 +14,7 @@ p {
     font-family: Open Sans;
 }
 
-div, button, h1, h2, h3, h4, h5, h6 {
+div.holder, button, h1, h2, h3, h4, h5, h6 {
     margin: 5px;
     padding: 5px;
 }
@@ -59,6 +59,10 @@ h6 {
     color: #3BAFDA;
 }
 
+.text-clear {
+    color: #fff;
+}
+
 .bg-success {
     background-color: #8CC152;
 }
@@ -73,4 +77,8 @@ h6 {
 
 .bg-info {
     background-color: #3BAFDA;
+}
+
+.bg-clear {
+    background-color: #fff;
 }
